--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="HandheldFriendly" content="true"/> 
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Interview Intive-FDV for React Position">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Interview Intive-FDV</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <main id="root" role="main"></main>
   </body>
 </html>
